manifests/blue-pixel-fastapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-pixel-fastapi
  labels:
    app: blue-pixel-fastapi

spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-pixel-fastapi
  template:
    metadata:
      labels:
        app: blue-pixel-fastapi
    spec:
      containers:
        - name: blue-pixel-fastapi
          image: ghcr.io/idan-fishman/blue-green-pixels-blue-pixel-fastapi:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
