manifests/blue-pixel-golang-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-pixel-golang
  namespace: blue-green-pixels
  labels:
    app: blue-pixel-golang
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blue-pixel-golang
  template:
    metadata:
      labels:
        app: blue-pixel-golang
    spec:
      containers:
        - name: blue-pixel-golang
          image: ghcr.io/idan-fishman/blue-green-pixels-blue-pixel-golang:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
