manifests/green-pixel-golang-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: green-pixel-golang
  namespace: blue-green-pixels
spec:
  replicas: 1
  selector:
    matchLabels:
      app: green-pixel
  template:
    metadata:
      labels:
        app: green-pixel
    spec:
      containers:
        - name: green-pixel-golang
          image: ghcr.io/idan-fishman/blue-green-pixels-green-pixel-golang:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
