manifests/pixels-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pixels
  namespace: blue-green-pixels
  labels:
    app: pixels
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pixels
  template:
    metadata:
      labels:
        app: pixels
    spec:
      containers:
        - name: pixels
          image: ghcr.io/idan-fishman/blue-green-pixels-pixels:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
