manifests/rollout-status-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rollout-status
  namespace: blue-green-pixels
  labels:
    app: rollout-status
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rollout-status
  template:
    metadata:
      labels:
        app: rollout-status
    spec:
      containers:
        - name: rollout-status
          image: ghcr.io/idan-fishman/blue-green-pixels-rollout-status:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
