manifests/blue-pixel-fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-pixel-fastapi
spec:
  selector:
    app: blue-pixel-fastapi
  ports:
    - port: 8000
      targetPort: 8000
