manifests/blue-pixel-golang-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-pixel-golang
  namespace: blue-green-pixels
spec:
  selector:
    app: blue-pixel-golang
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
