manifests/creators-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: creators
  namespace: blue-green-pixels
spec:
  selector:
    app: creators
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
