manifests/green-pixel-fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-pixel-fastapi
  namespace: blue-green-pixels
spec:
  selector:
    app: green-pixel-fastapi
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
