manifests/pixels-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pixels
  namespace: blue-green-pixels
spec:
  selector:
    app: pixels
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
