manifests/rollout-status-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-status
  namespace: blue-green-pixels
spec:
  selector:
    app: rollout-status
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
