manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-pixels
  namespace: blue-green-pixels
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /blue/?(.*)
            pathType: Prefix
            backend:
              service:
                name: blue-pixel-fastapi
                port:
                  number: 8000
          - path: /green/?(.*)
            pathType: Prefix
            backend:
              service:
                name: green-pixel-fastapi
                port:
                  number: 8000
          - path: /creators/?(.*)
            pathType: Prefix
            backend:
              service:
                name: creators
                port:
                  number: 8000
          - path: /rollout-status/?(.*)
            pathType: Prefix
            backend:
              service:
                name: rollout-status
                port:
                  number: 3000
